--- a/index.html
+++ b/index.html
@@ -18,13 +18,18 @@
   "imports": {
     "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react-dom/client": "https://esm.sh/react-dom@^19.2.3/client"
   }
 }
 </script>
 </head>
 <body class="bg-slate-50 text-slate-900">
     <div id="root"></div>
-    <script type="module" src="./index.tsx"></script>
+    <!-- esm.sh/run を使ってブラウザで直接 TSX を実行可能にします -->
+    <script type="module">
+        import "https://esm.sh/run";
+    </script>
+    <script type="text/tsx" src="./index.tsx"></script>
 </body>
 </html>
