fix(deps): Update React/ReactDOM ESM import
Refactors the ESM import path for `react-dom/client` to align with the latest `esm.sh` usage.
Introduces a more robust check for the root element before attempting to render the React application.

--- a/index.html
+++ b/index.html
@@ -18,18 +18,16 @@
   "imports": {
     "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react-dom/client": "https://esm.sh/react-dom@^19.2.3/client"
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
   }
 }
 </script>
 </head>
 <body class="bg-slate-50 text-slate-900">
     <div id="root"></div>
-    <!-- esm.sh/run を使ってブラウザで直接 TSX を実行可能にします -->
-    <script type="module">
-        import "https://esm.sh/run";
-    </script>
-    <script type="text/tsx" src="./index.tsx"></script>
+    
+    <!-- esm.sh/run が React や App.tsx を自動的に解決・変換して実行します -->
+    <script type="module" src="https://esm.sh/run"></script>
+    <script type="text/tsx" src="index.tsx"></script>
 </body>
 </html>
