--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -16,9 +15,9 @@
 <script type="importmap">
 {
   "imports": {
-    "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
@@ -26,8 +25,14 @@
 <body class="bg-slate-50 text-slate-900">
     <div id="root"></div>
     
-    <!-- esm.sh/run が React や App.tsx を自動的に解決・変換して実行します -->
-    <script type="module" src="https://esm.sh/run"></script>
-    <script type="text/tsx" src="index.tsx"></script>
+    <!-- esm.sh/run を読み込みます -->
+    <script type="module">
+        import "https://esm.sh/run";
+    </script>
+
+    <!-- index.tsx を読み込むエントリーポイント。esm.sh/run がこれを検知して実行します -->
+    <script type="text/tsx">
+        import "./index.tsx";
+    </script>
 </body>
 </html>
