feat: Use stable script loading for entry point
Switches from inline script content to `src` attribute for loading the main entry point (`index.tsx`) and the `esm.sh/run` loader. This improves stability and adheres to best practices for script loading in web applications. Also, adds a `DOMContentLoaded` listener to ensure the app renders only after the DOM is fully parsed.

--- a/index.html
+++ b/index.html
@@ -25,14 +25,10 @@
 <body class="bg-slate-50 text-slate-900">
     <div id="root"></div>
     
-    <!-- esm.sh/run を読み込みます -->
-    <script type="module">
-        import "https://esm.sh/run";
-    </script>
+    <!-- esm.sh/run ローダー -->
+    <script type="module" src="https://esm.sh/run"></script>
 
-    <!-- index.tsx を読み込むエントリーポイント。esm.sh/run がこれを検知して実行します -->
-    <script type="text/tsx">
-        import "./index.tsx";
-    </script>
+    <!-- メインのエントリーポイント。srcで指定するのが最も安定します -->
+    <script type="text/tsx" src="./index.tsx"></script>
 </body>
 </html>
