--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 <body class="bg-slate-50 text-slate-900">
     <div id="root"></div>
     
-    <!-- esm.sh/run ローダー -->
+    <!-- esm.sh/run は TSXのコンパイルとモジュールの読み込みを自動で行うライブラリです -->
     <script type="module" src="https://esm.sh/run"></script>
 
-    <!-- メインのエントリーポイント。srcで指定するのが最も安定します -->
-    <script type="text/tsx" src="./index.tsx"></script>
+    <!-- アプリケーションのエントリーポイント。importmapなしで動作するように設定します -->
+    <script type="text/tsx" src="index.tsx"></script>
 </body>
 </html>
