--- a/index.html
+++ b/index.html
@@ -8,16 +8,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Noto+Sans+JP:wght@400;500;700;900&display=swap" rel="stylesheet">
     <style>
         body { font-family: 'Inter', 'Noto+Sans+JP', sans-serif; }
-        /* スクロールバーのカスタマイズ */
         .no-scrollbar::-webkit-scrollbar { display: none; }
         .no-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
     </style>
 <script type="importmap">
 {
   "imports": {
+    "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/"
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
   }
 }
 </script>
@@ -25,10 +24,11 @@
 <body class="bg-slate-50 text-slate-900">
     <div id="root"></div>
     
-    <!-- esm.sh/run は TSXのコンパイルとモジュールの読み込みを自動で行うライブラリです -->
+    <!-- esm.sh/run: TypeScript/TSXをブラウザで直接実行するための軽量ローダー -->
+    <!-- importmapとの競合を避けるため、これ単体で使用します -->
     <script type="module" src="https://esm.sh/run"></script>
 
-    <!-- アプリケーションのエントリーポイント。importmapなしで動作するように設定します -->
+    <!-- index.tsxをエントリーポイントとして指定 -->
     <script type="text/tsx" src="index.tsx"></script>
 </body>
 </html>
