fix: Simplify React root rendering
Refactors the `index.tsx` file to use a more direct approach for creating the React root, removing the `DOMContentLoaded` event listener.

Also updates the `index.html` import map to correctly place `react/` imports and cleans up comments.

Additionally, it makes minor adjustments to the `App.tsx` to ensure a default guide is used if a matching `currentData.id` is not found, and updates the prompt generation to be more specific and align with the current design choices.

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <script type="importmap">
 {
   "imports": {
-    "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
@@ -25,10 +25,9 @@
     <div id="root"></div>
     
     <!-- esm.sh/run: TypeScript/TSXをブラウザで直接実行するための軽量ローダー -->
-    <!-- importmapとの競合を避けるため、これ単体で使用します -->
     <script type="module" src="https://esm.sh/run"></script>
 
-    <!-- index.tsxをエントリーポイントとして指定 -->
+    <!-- エントリーポイント -->
     <script type="text/tsx" src="index.tsx"></script>
 </body>
 </html>
