--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/"
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "react": "https://esm.sh/react@^19.2.3"
   }
 }
 </script>
@@ -25,12 +25,15 @@
     <div id="root"></div>
     
     <!-- 
-      esm.sh/run は、TypeScript/TSXをブラウザで即座に実行するモジュールローダーです。
-      手動の importmap があると競合して実行が止まるため、このタグのみを使用します。
+      esm.sh/run はブラウザでの即時実行用ですが、Viteビルド時はビルドツールが処理します。
+      ホワイトスクリーンを避けるため importmap は削除しました。
     -->
     <script type="module" src="https://esm.sh/run"></script>
 
-    <!-- エントリーポイントの指定 -->
-    <script type="text/tsx" src="index.tsx"></script>
+    <!-- 
+      Viteのビルドエラーを回避するため type="module" に変更しました。
+      esm.sh/run も type="module" かつ拡張子が .tsx であれば正常に動作します。
+    -->
+    <script type="module" src="index.tsx"></script>
 </body>
 </html>
