--- a/index.html
+++ b/index.html
@@ -14,26 +14,19 @@
 <script type="importmap">
 {
   "imports": {
+    "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3"
+    "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
 </head>
 <body class="bg-slate-50 text-slate-900">
     <div id="root"></div>
-    
     <!-- 
-      esm.sh/run はブラウザでの即時実行用ですが、Viteビルド時はビルドツールが処理します。
-      ホワイトスクリーンを避けるため importmap は削除しました。
+      Vite + Cloudflare Pages のビルドフローでは標準的なモジュールインポートのみを使用します。
+      esm.sh/run や手動の importmap はビルド結果と競合するため削除しました。
     -->
-    <script type="module" src="https://esm.sh/run"></script>
-
-    <!-- 
-      Viteのビルドエラーを回避するため type="module" に変更しました。
-      esm.sh/run も type="module" かつ拡張子が .tsx であれば正常に動作します。
-    -->
-    <script type="module" src="index.tsx"></script>
+    <script type="module" src="/index.tsx"></script>
 </body>
 </html>
